src/snapshots/librbxpm__resolution__tests__one_dependency.snap
---
source: src/resolution.rs
expression: resolve
---
activated:
  - biff/minimal@0.1.0
  - biff/one-dependency@0.1.0
metadata:
  biff/minimal@0.1.0:
    realm: shared
    origin_realm: shared
    source_registry: DefaultRegistry
  biff/one-dependency@0.1.0:
    realm: shared
    origin_realm: shared
    source_registry: DefaultRegistry
shared_dependencies:
  biff/one-dependency@0.1.0:
    Minimal: biff/minimal@0.1.0
server_dependencies: {}
dev_dependencies: {}

