src/snapshots/librbxpm__resolution__tests__server_to_shared_and_shared_to_shared.snap
---
source: src/resolution.rs
expression: resolve
---
activated:
  - biff/root@1.0.0
  - biff/server@1.0.0
  - biff/shared@1.0.0
metadata:
  biff/root@1.0.0:
    realm: shared
    origin_realm: shared
    source_registry: DefaultRegistry
  biff/server@1.0.0:
    realm: server
    origin_realm: server
    source_registry: DefaultRegistry
  biff/shared@1.0.0:
    realm: shared
    origin_realm: shared
    source_registry: DefaultRegistry
shared_dependencies:
  biff/root@1.0.0:
    Shared: biff/shared@1.0.0
  biff/server@1.0.0:
    Shared: biff/shared@1.0.0
server_dependencies:
  biff/root@1.0.0:
    Server: biff/server@1.0.0
dev_dependencies: {}

